# MediaFlow_Studio

./: .env.example  .gitignore  App.tsx  LICENSE  PRIVACY.md  README.md  README_MAIN.md  docker-compose.yml  index.css  index.html  package-lock.json  package.json  tailwind.config.js  types.ts
.github/: copilot-instructions.md
.github/workflows/: backend-test.yml  desktop-build.yml  frontend-build.yml  release.yml
backend/: main.py  requirements.txt
backend/app/: main.py  models.py
components/: AudioProcessor.tsx  DependencyChecker.tsx  Downloader.tsx  FolderSetup.tsx  MiniPlayer.tsx  ModelDownloader.tsx  Settings.tsx  StemSeparator.tsx  TauriWarning.tsx
context/: ToastContext.tsx
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_GUIDE.md  DEVELOPMENT.md  MAIN_BRANCH_README.md
frontend-desktop/: tauri.conf.json
frontend-mobile/: pubspec.yaml
frontend-web/: package.json
scripts/: audio_analyzer.py  check_dependencies.py  generate-icons.js  stem_separator.py
services/: mockService.ts
shared/: constants.py  models.py  validators.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: audio_analyzer.py  download_models.py  stem_separator.py
src-tauri/src/: commands.rs  lib.rs  main.rs
src/shims/: tauri.d.ts
utils/: tauriHelper.ts
